add working crud repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-server.servlet.context-path=/index
+server.servlet.context-path=/searchApp
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
